--- a/dev/fvector.Rmd
+++ b/dev/fvector.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Definition: `fvector`
 
-`fvector` defines a new S3 class to represent functional data. 
+`fvector` is a new `S3` class for representing functional data. 
 
 Internallly, an `fvector` is 
 
@@ -33,40 +33,61 @@ library(dplyr)
 
 feval <- function(data, ...) UseMethod("feval")
 
-feval.matrix <- function(data, argvals = NULL, regular = NULL, ...) {
+new_feval <- function(argvals, datalist, regular, domain, range) {
+  if (!regular) {
+    argvals <- map2(datalist, argvals, ~ .y[!is.na(.x)])
+    datalist <- map(datalist, ~ .x[!is.na(.x)])
+    class <- "feval_irreg"
+  } 
+  ret <- map2(argvals, datalist, ~ make_fapprox(.x, .y))
+  if (regular) {
+    argval_env <- new.env(); argval_env$argvals <- argvals[[1]]
+    ret <- map(ret, function(f) {
+      rm("argvals", envir = environment(f))
+      parent.env(environment(f)) <- argval_env
+      f
+    })
+    class <- "feval_reg"
+  }
+  names(ret) <- names(datalist) %||% seq_along(ret)
+  structure(ret, 
+    domain = domain,
+    range = range,
+    class = c(class, "feval", "fvector"))
+}
+
+feval.matrix <- function(data, argvals = NULL, regular = NULL, domain = NULL, 
+    range = NULL, ...) {
   stopifnot(is.numeric(data))
   
   argvals <- find_argvals(data, argvals) # either arg or numeric colnames or 1:ncol
   datalist <- split(data, rownames(data) %||% seq_len(dim(data)[1]))
   
+  domain <- domain %||% range(argvals)
+  range <- range %||% range(data, na.rm = TRUE)
   regular <- regular %||% !any(is.na(data))
-  if (!regular) {
-    argvals <- map2(datalist, argvals, ~ .y[!is.na(.x)])
-    datalist <- map(datalist, ~ .x[!is.na(.x)])
-    class <- "feval_irreg"
-  } else {
-    class <- "feval_reg"
-  }
-  structure(datalist, 
-    argvals = argvals, 
-    class = c(class, "feval", "fvector"))
+  new_feval(argvals, datalist, regular, domain, range)
 }
 # use first 3 columns of data for function information
-feval.data.frame <- function(data, id = 1, argvals = 2, value = 3, ...) {
+feval.data.frame <- function(data, id = 1, argvals = 2, value = 3, domain = NULL, 
+    range = NULL, ...) {
   stopifnot(ncol(data) >= 3, is.numeric(data[[argvals]]), 
     is.numeric(data[[value]]))
   datalist <- split(data[[value]], data[[id]])
   argvals <- split(data[[argvals]], data[[id]])
-  if (sum(duplicated(argvals)) == length(argvals) - 1) {
-    argvals <- unname(argvals[1])
-    class <- "feval_reg"
-  } else class <- "feval_irreg"
-  structure(datalist, 
-    argvals = argvals, 
-    class = c(class, "feval", "fvector"))
+  domain <- domain %||% range(argvals)
+  range <- range %||% range(datalist, na.rm = TRUE)
+  regular <- sum(duplicated(argvals)) == length(argvals) - 1
+  new_feval(argvals, datalist, regular, domain, range)
 }
 
-argvals <- function(x) attr(x, "argvals")
+argvals <- function(x) UseMethod("argvals")
+argvals.feval_irreg <- function(x) map(x, ~ environment(.x)$argvals)
+argvals.feval_reg <- function(x) parent.env(environment(x[[1]]))$argvals
+
+domain <- function(x) attr(x, "domain")
+range.fvector <- function(x) attr(x, "range")
+
 find_argvals <- function(data, argvals) {
   if (is.null(argvals)) {
     argvals <- as.numeric(dimnames(data)[[2]])
@@ -76,22 +97,48 @@ find_argvals <- function(data, argvals) {
     is.numeric(argvals), all(!is.na(argvals)))
   list(argvals)
 }
+make_fapprox <- function(argvals, data) {
+  function(v) {
+    Hmisc::approxExtrap(x = argvals, y = data, xout = v)$y
+  }
+}
+
 ```
 
 ```{r feval-conversion}
 # conversions to/from data.frame, matrix
 as.feval <- function(data, ...) UseMethod("as.feval")
-as.feval.matrix  <- function(data, argvals = NULL, regular = NULL, ...) {
-  feval(data, argvals, regular, ...)
+as.feval.matrix  <- function(data, argvals = NULL, regular = NULL, domain = NULL, 
+    range = NULL, ...) {
+  feval(data, argvals, regular, domain, range, ...)
 }
-as.feval.data.frame <- function(data, id = 1, argvals = 2, value = 3, ...) {
-  feval(data, id, argvals, value, ...)
+as.feval.data.frame <- function(data, id = 1, argvals = 2, value = 3, domain = NULL, 
+    range = NULL, ...) {
+  feval(data, id, argvals, value, domain, range, ...)
 }
 
-as.data.frame.feval  <- function(x) {
-  bind_rows(pmap(list(id = as.list(seq_along(x)), argvals = argvals(x),  value = x), 
-    ~ bind_cols(id = rep(..1, length(..2)), argvals = ..2, value = ..3)))
+as.data.frame.feval <- function(x) {
+  argvals <- argvals(x)
+  if (inherits(x, "feval_reg")) argvals <- list(argvals)
+  tmp <- list(id = names(x), argvals = argvals,  flist = x)
+  bind_rows(pmap(tmp, ~ bind_cols(id = rep(..1, length(..2)),  argvals = ..2, 
+    value = do.call(..3, list(..2)))))
 }
+as.matrix.feval_reg <- function(x) {
+  argvals <- argvals(x)
+  ret <- vapply(x, function(f) environment(f)$data, numeric(length(argvals)))
+  dimnames(ret) <- list(argvals, names(x))
+  structure(t(ret), argvals = argvals)
+}
+as.matrix.feval_irreg <- function(x) {
+  argvals <- argvals(x)
+  grid <- sort(unique(unlist(argvals)))
+  ret <- pmap(list(x, argvals, grid), 
+  dimnames(ret) <- list(argvals, names(x))
+  structure(t(ret), argvals = argvals)
+}
+if (inherits(x, "feval_irreg")) argvals <- sort(unique(unlist(argvals)))
+  
 ```
 
 ```{r sandbox}
@@ -115,26 +162,46 @@ all.equal(as.feval(as.data.frame(f_reg)), f_reg)
 all.equal(as.feval(as.data.frame(f_irreg)), f_irreg)
 ```
 
-*TODO: additional attributes "domain", "range"; validation methods*
+*TODO: validation methods*
 *TODO: converters for fdata, fd*
 *TODO: multivariate functions, multidimensional argvals*
 
 ```{r feval-methods, eval = FALSE}
-print
-summary
-`[`
-`[<-`  
-plot
-length
-deriv
-mean
-quantile
-var
-sd
-cov
-cor
-max
-min
+print.feval <- function(x) {
+  cat(paste0("feval[",length(x),"] on (", domain(x)[1], ",", domain(x)[2], ")\n"))
+  cat("evaluated for:\n")
+  print(argvals(x))
+  invisible(x)
+}
+#summary #define Arith-methods first.... 
+# c.feval_reg #???
+`[.feval` <- function(x, i, j, interpolate = TRUE) {
+  browser()
+  if (missing(j)) {
+    ret <- unclass(x)[i]
+    domain(ret) <- domain(x); range(ret) <- range(x); class(ret) <- class(x)
+    return(ret)
+  }
+  if (!interpolate) {
+    in_argvals <- map2(list(j), argvals(x), ~ which(.x %in% .y))
+    if(any(!in_argvals)) warning("<j> not part of argvals")
+  }
+  # check j in range  
+  }
+}
+#`[.feval_irreg`
+#`[<-`  
+#plot
+#length
+#deriv
+#mean
+#quantile
+#var
+#sd
+#cov
+#cor
+#max
+#min
 
 # new generics:
 integrate
