--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -74,6 +74,8 @@ data wrangling and exploratory analysis.
 
 ## Example Data
 
+Some example data used in this vignette: 
+
 ```{r load, echo=FALSE}
 dti = with(refund::DTI, 
   data.frame(id = ID, sex = sex, 
@@ -95,7 +97,7 @@ text(x = -.1, y = ex[,0.07], labels = names(ex), col = pal_5)
 ex
 ```
 
-## Example Data
+A prepped version of `refund::DTI`:
 
 ```{r}
 dti
@@ -114,8 +116,6 @@ ex %>% arg() %>% str
 ex %>% domain() 
 ```
 
-## **`tf`** subclass: **`tfd`**
-
 - each **`tfd`**-vector contains an **`evaluator`** function that defines how to inter-/extrapolate `evaluations` between `arg`s (and remembers results of previous calls)
 
 ```{r}
@@ -125,7 +125,8 @@ evaluator(ex) = approx_spline
 
 ## **`tf`** subclass: **`tfd`** 
 
-- **`tfd`** has subclasses for regular data with a common grid and irregular or sparse data.
+- **`tfd`** has subclasses for regular data with a common grid and irregular or sparse data,
+like the `rcst` measurements in our `dti` data.
 
 ```{r}
 dti$rcst[1:2]
@@ -157,8 +158,6 @@ ex_b = ex %>% tfb(); ex_b[1:2]
 ex[1:2] %>% tfb(bs = "tp", k = 55)
 ```
 
-## **`tf`** subclass: **`tfb`** spline basis
-
 ```{r, eval = FALSE}
 ex  %>% plot()
 ex_b %>% plot(col = "red")
@@ -184,8 +183,6 @@ lines(tfb(ex, k = 35, penalized = FALSE), col = "blue")
 (ex %>% tfb_fpc(pve = .95))
 ```
 
-## **`tf`** subclass: **`tfb`** FPC-based
-
 ```{r, eval = FALSE}
 ex %>% plot()
 ex %>% tfb_fpc(smooth = FALSE, pve = .999) %>% plot(col = "red")
@@ -201,7 +198,10 @@ lines(ex %>% tfb_fpc(pve = .95), col = "blue")
 
 # `tf`-Class: Methods
 
-## Subset & subassign
+**`tidyfun`** implements almost all types of operations that are available for conventional
+numerical or logical vectors for `tf`-vectors as well, so you can:
+
+### subset & subassign:
 
 ```{r}
 ex[1:2]
@@ -209,15 +209,7 @@ ex[1:2] = ex[2:1]
 ex
 ```
 
-## Evaluate
-
-```{r, warning  = FALSE}
-ex[1:2, seq(0, 1, l = 3)]
-ex["B", seq(0, .15, l = 3), interpolate = FALSE]
-ex[1:2, seq(0, 1, l = 2), matrix = FALSE] %>% str
-```
-
-## Compare & compute
+### compare & compute:
 
 ```{r, echo = FALSE}
 n_ex = names(ex)
@@ -234,7 +226,7 @@ ex - (2:-2) != ex
 names(ex) = n_ex
 ```
 
-## Summarize 
+### summarize: 
 
 ```{r}
 c(mean = mean(ex), sd = sd(ex))
@@ -243,7 +235,22 @@ depth(ex) ## Modified Band-2 Depth (à la Sun/Genton/Nychka, 2012), others to co
 median(ex) == ex[which.max(depth(ex))]
 ```
 
-## (Simple, local) smoothing
+In addition, **`tidyfun`** provides methods specific for functional data:
+
+### evaluate:
+
+`tf`-objects have a special `[`-operator: Its second argument specifies 
+`arg`ument values at which to evaluate the functions and has some additional options, 
+so it's easy to get point values for `tf` objects: 
+
+```{r, warning  = FALSE}
+ex[1:2, seq(0, 1, l = 3)]
+ex["B", seq(0, .15, l = 3), interpolate = FALSE]
+ex[1:2, seq(0, 1, l = 7), matrix = FALSE] %>% str
+```
+
+
+### (simple, local) smoothing
 
 ```{r, echo = FALSE}
 layout(t(1:3))
@@ -260,7 +267,7 @@ ex %>% smooth("rollmedian", k = 5) %>% plot
 ex %>% smooth("savgol", fl = 11) %>% plot
 ```
 
-## Differentiate & integrate
+### differentiate & integrate:
 
 ```{r, echo = FALSE}
 layout(t(1:3))
@@ -273,14 +280,14 @@ ex %>% plot
 ex %>% smooth() %>% deriv() %>% plot
 ex %>% integrate(definite = FALSE) %>% plot
 ```
-\vskip -1em
+
 ```{r}
 ex %>% integrate()
 ```
 
-## Query
+### query
 
-Find `arg`uments $t$ satisfying a condition on `value` $f(t)$ (and `arg`ument $t$):
+**`tidyfun`** makes it easy to find (ranges of) `arg`uments $t$ satisfying a condition on `value` $f(t)$ (and `arg`ument $t$):
 
 ```{r}
 ex %>% anywhere(value > .65)
@@ -289,7 +296,7 @@ ex[2] %>% where(value > .6, "range")
 ex %>% where(value > .6 & arg > .5, "first")
 ```
 
-## Zoom & query
+### zoom & query
 
 ```{r, ex-fig2, echo = FALSE}
 plot(ex,  xlim = c(-0.15, 1), col = pal_5, lwd = 2)
@@ -303,7 +310,7 @@ ex[c("A", "D")] %>% zoom(.5, 1) %>% where(value == max(value), "first")
 ex %>% zoom(0.2, 0.6) %>% anywhere(value <= median(ex)[, arg])
 ```
 
-## Convert & construct
+### convert & construct
 
 To & from list, matrix or data frame with `"id"`,`"arg"`,`"value"`-columns:
 
@@ -316,7 +323,7 @@ tfd(ex_df) == tfd(ex_matrix)
 
 # New geoms and stats for functional data for customizable `ggplot2` graphics
 
-## Visualize: `base` 
+### visualize with `base` graphics
 
 ```{r ex-fig3}
 layout(t(1:2))
@@ -324,21 +331,18 @@ plot(ex, type = "spaghetti"); lines(c(median(ex), mean(ex)), col = c(2, 4))
 plot(ex, type = "lasagna", col = viridis(50))
 ```
 
-## Visualize: `ggplot2`
+### visualize with `ggplot2`
 
-New **pasta-themed** `geom`s with a **`tf`**-aesthetic for functional data:
+**Pasta-themed** `geom`s and plots with for functional data:
 
 - **`geom_spaghetti`** for lines
 - **`geom_meatballs`**  for (lines &) points
-- **`geom_lasagna`** with an **`order`**-aesthetic to sort the lasagna layers
+- **`gglasagna`** with **`order`**-arguments to sort the lasagna layers
 
 To come:
 
 - **`geom_pappardelle`** for functional boxplots
 - **`geom_capellini`** for little sparklines / glyphs on maps etc. 
-
-
-## Visualize: `ggplot2`
 
 ```{r, eval = FALSE}
 ggplot(dti, aes(y = cca, colour = case)) +
@@ -349,8 +353,6 @@ ggplot(dti, aes(y = cca, colour = case)) +
 ggplot(dti) + 
   geom_spaghetti(aes(y = cca, col = case, alpha = .2 + .4*(case == "control"))) + facet_wrap(~ sex) + scale_alpha(guide = 'none', range = c(.2, .4))
 ```
-
-## Visualize: `ggplot2`
 
 ```{r, eval = FALSE}
 gglasagna(dti, cca, order = integrate(cca, definite = TRUE)) + facet_wrap(~ case)
@@ -363,7 +365,7 @@ gglasagna(dti, cca, order = integrate(cca, definite = TRUE), arg = seq(0,1, l = 
 
 # Wrangling `tf`s inside data frames
 
-## Wrangling `tf`s inside data frames: `dplyr`
+### wrangling `tf`s inside data frames: `dplyr`
 
 **`dplyr`** verbs **`filter`**, **`select`**, **`mutate`**, **`summarize`** work on **`tf`**-columns - e.g.:
 
@@ -372,32 +374,19 @@ gglasagna(dti, cca, order = integrate(cca, definite = TRUE), arg = seq(0,1, l = 
 dti %>% group_by(case, sex) %>% summarize(mean_rcst = mean(rcst, na.rm = TRUE))       %>% ungroup
 # which subjects go below cca = .26:
 dti %>% filter(anywhere(cca, value < .26))
-```
-
-## Wrangling `tf`s inside data frames: `dplyr`
-
-```{r, dplyr2}
 # center & scale functional data: 
 dti %>% 
   mutate(cca = tfb(cca, verbose = FALSE), 
     cca_z = (cca - mean(cca))/sd(cca)) %>% glimpse
 ```
 
-## Wrangling `tf`s inside data frames: `tidyr`
+### wrangling `tf`s inside data frames: `tidyr`
 
-`tidyfun` provides `tf_` variants of `tidyr`-verbs to reshape and reformat functional data while keeping it in sync with other covariates:
+**`tidyfun`** provides `tf_` variants of `tidyr`-verbs to reshape and reformat functional data while keeping it in sync with other covariates:
 
-\vskip 2em
 
 - `tf_spread:` `tf` $\rightarrow$ columns for each `arg`
 - `tf_gather:` columns for each `arg` $\rightarrow$ `tf`
-
-\vskip 2em
-
-- `tf_nest  :` data in long format (`id`, `arg`, `value`)  $\rightarrow$ `tf`
-- `tf_unnest:` `tf` $\rightarrow$ data in long format (`id`, `arg`, `value`)  
-
-## Wrangling `tf`s inside data frames: `tidyr`
 
 ```{r, tidyr}
 # spread tf out into columns for each arg
@@ -408,13 +397,13 @@ dti_wide = dti %>% tf_spread(cca); dti_wide[, 1:7] %>% glimpse()
 dti_wide %>% tf_gather(matches("cca_")) %>% glimpse()
 ```
 
-## Wrangling `tf`s inside data frames: `tidyr`
+- `tf_unnest:` `tf` $\rightarrow$ data in long format (`id`, `arg`, `value`)  
+- `tf_nest  :` data in long format (`id`, `arg`, `value`)  $\rightarrow$ `tf`
 
 ```{r, tidyr2}
 # unnest tf by writing 3 loong columns id, arg, value:
 # (will try to avoid unnecessary duplication of columns)
 dti_long = dti %>% tf_unnest(cca); dti_long %>% glimpse()  
-
 # nest tf by writing 3 loong columns id, arg, value:
 dti_long %>% tf_nest(cca_value, .id = cca_id, .arg = cca_arg) %>% glimpse()
 ```
