vignette loads the library like real people would

--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -31,8 +31,9 @@ options(
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 
-try(devtools::load_all("~/fda/tidyfun"))
-try(devtools::load_all("~/Work/fda/tidyfun"))
+library("tidyfun")
+#try(devtools::load_all("~/fda/tidyfun"))
+#try(devtools::load_all("~/Work/fda/tidyfun"))
 
 pal_5 = viridis(7)[-(1:2)]
 set.seed(1221)
