--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -410,3 +410,6 @@ dti_long = dti %>% tf_unnest(cca); dti_long %>% glimpse()
 # nest tf by writing 3 loong columns id, arg, value:
 dti_long %>% tf_nest(cca_value, .id = cca_id, .arg = cca_arg) %>% glimpse()
 ```
+
+Note that `left/right_join`-operations as well as `bind_rows` do not currently work 
+for tables with `tfd` or `tfb`-columns, see [tidyfun/issues/53](https://github.com/fabian-s/tidyfun/issues/53). `bind_rows` can be easily avoided by using `rbind`, which still works, instead.
