#54: domain -> tf_domain

--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -108,7 +108,7 @@ text(x = -.1, y = ex[,0.07], labels = names(ex), col = pal_5)
 ```{r}
 ex %>% tf_evaluations() %>% str
 ex %>% arg() %>% str
-ex %>% domain() 
+ex %>% tf_domain() 
 ```
 
 - each **`tfd`**-vector contains an **`evaluator`** function that defines how to inter-/extrapolate `evaluations` between `arg`s (and remembers results of previous calls)
