--- a/vignettes/x03_Visualization.Rmd
+++ b/vignettes/x03_Visualization.Rmd
@@ -7,7 +7,7 @@ output:
       fig_width: 12
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Data_Manipulation}
+  %\VignetteIndexEntry{Visualization}
   %\VignetteEncoding{UTF-8}
 ---
 
