makes the talk longer and better...

--- a/attic/talks/header.tex
+++ b/attic/talks/header.tex
@@ -1,5 +1,8 @@
 \setbeamercovered{transparent} % was noch kommt, wird schon transparent angezeigt
 
+\usepackage[sfdefault,light]{FiraSans} %% option 'sfdefault' activates Fira Sans as the default text font
+\usepackage[T1]{fontenc}
+
 \usepackage{amssymb,amsmath,amsfonts} %Beamerklasse, Mathesymbole
 \usepackage{dsfont}
 \usepackage[english]{babel}
